<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>software.amazon.lambda</groupId>
    <artifactId>e2e-test-handlers-parent</artifactId>
    <version>2.4.0</version>
    <packaging>pom</packaging>
    <name>Handlers for End-to-End tests</name>
    <description>Fake handlers that use Powertools for AWS Lambda (Java).</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <lambda.java.core>1.3.0</lambda.java.core>
        <lambda.java.serialization>1.1.6</lambda.java.serialization>
        <lambda.java.events>3.16.1</lambda.java.events>
        <maven.shade.version>3.6.0</maven.shade.version>
        <aspectj.plugin.version>1.14.1</aspectj.plugin.version>
        <maven.compiler.version>3.14.0</maven.compiler.version>
        <aws.sdk.version>2.33.5</aws.sdk.version>
        <aspectj.version>1.9.20.1</aspectj.version>
        <maven.deploy.skip>true</maven.deploy.skip>
    </properties>

    <modules>
        <module>batch</module>
        <module>largemessage</module>
        <module>largemessage_idempotent</module>
        <module>logging-log4j</module>
        <module>logging-logback</module>
        <module>tracing</module>
        <module>metrics</module>
        <module>idempotency</module>
        <module>parameters</module>
        <module>validation-alb-event</module>
        <module>validation-apigw-event</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>software.amazon.awssdk</groupId>
                <artifactId>bom</artifactId>
                <version>${aws.sdk.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.aspectj</groupId>
                <artifactId>aspectjrt</artifactId>
                <version>${aspectj.version}</version>
            </dependency>
            <dependency>
                <groupId>software.amazon.lambda</groupId>
                <artifactId>powertools-logging-log4j</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>software.amazon.lambda</groupId>
                <artifactId>powertools-logging-logback</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>software.amazon.lambda</groupId>
                <artifactId>powertools-tracing</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>software.amazon.lambda</groupId>
                <artifactId>powertools-metrics</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>software.amazon.lambda</groupId>
                <artifactId>powertools-idempotency</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>software.amazon.lambda</groupId>
                <artifactId>powertools-idempotency-dynamodb</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>software.amazon.lambda</groupId>
                <artifactId>powertools-parameters-appconfig</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>software.amazon.lambda</groupId>
                <artifactId>powertools-large-messages</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>software.amazon.lambda</groupId>
                <artifactId>powertools-batch</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>software.amazon.lambda</groupId>
                <artifactId>powertools-validation</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.amazonaws</groupId>
                <artifactId>aws-lambda-java-core</artifactId>
                <version>${lambda.java.core}</version>
            </dependency>
            <dependency>
                <groupId>com.amazonaws</groupId>
                <artifactId>aws-lambda-java-events</artifactId>
                <version>${lambda.java.events}</version>
            </dependency>
            <dependency>
                <groupId>com.amazonaws</groupId>
                <artifactId>aws-lambda-java-serialization</artifactId>
                <version>${lambda.java.serialization}</version>
            </dependency>
            <dependency>
                <groupId>com.amazonaws</groupId>
                <artifactId>aws-lambda-java-runtime-interface-client</artifactId>
                <version>2.8.3</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>${maven.shade.version}</version>
                    <configuration>
                        <createDependencyReducedPom>false</createDependencyReducedPom>
                        <finalName>function</finalName>
                    </configuration>
                    <executions>
                        <execution>
                            <phase>package</phase>
                            <goals>
                                <goal>shade</goal>
                            </goals>
                            <configuration>
                                <transformers>
                                    <transformer
                                        implementation="org.apache.logging.log4j.maven.plugins.shade.transformer.Log4j2PluginCacheFileTransformer" />
                                </transformers>
                            </configuration>
                        </execution>
                    </executions>
                    <dependencies>
                        <dependency>
                            <groupId>org.apache.logging.log4j</groupId>
                            <artifactId>log4j-transform-maven-shade-plugin-extensions</artifactId>
                            <version>0.2.0</version>
                        </dependency>
                    </dependencies>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven.compiler.version}</version>
                    <configuration>
                        <source>${maven.compiler.source}</source>
                        <target>${maven.compiler.target}</target>
                        <useIncrementalCompilation>false</useIncrementalCompilation>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>dev.aspectj</groupId>
                    <artifactId>aspectj-maven-plugin</artifactId>
                    <version>${aspectj.plugin.version}</version>
                    <configuration>
                        <verbose>true</verbose>
                        <source>${maven.compiler.source}</source>
                        <target>${maven.compiler.target}</target>
                        <complianceLevel>${maven.compiler.target}</complianceLevel>
                        <Xlint>ignore</Xlint>
                        <encoding>${project.build.sourceEncoding}</encoding>
                    </configuration>
                    <executions>
                        <execution>
                            <goals>
                                <goal>compile</goal>
                                <goal>test-compile</goal>
                            </goals>
                        </execution>
                    </executions>
                    <dependencies>
                        <dependency>
                            <groupId>org.aspectj</groupId>
                            <artifactId>aspectjtools</artifactId>
                            <version>${aspectj.version}</version>
                        </dependency>
                    </dependencies>
                </plugin>
                <plugin>
                    <groupId>org.graalvm.buildtools</groupId>
                    <artifactId>native-maven-plugin</artifactId>
                    <version>0.11.0</version>
                    <extensions>true</extensions>
                    <executions>
                        <execution>
                            <id>build-native</id>
                            <goals>
                                <goal>build</goal>
                            </goals>
                            <phase>package</phase>
                        </execution>
                    </executions>
                    <configuration>
                        <imageName>handler</imageName>
                        <mainClass>com.amazonaws.services.lambda.runtime.api.client.AWSLambda</mainClass>
                        <buildArgs>
                            <arg>--enable-url-protocols=http</arg>
                            <arg>--add-opens java.base/java.util=ALL-UNNAMED</arg>
                        </buildArgs>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <!-- https://github.com/eclipse-aspectj/aspectj/blob/master/docs/dist/doc/JavaVersionCompatibility.md -->
        <profile>
            <id>jdk11to16</id>
            <activation>
                <jdk>[11,16]</jdk>
            </activation>
            <properties>
                <aspectj.version>1.9.7</aspectj.version>
            </properties>
        </profile>
        <profile>
            <id>jdk17to20</id>
            <activation>
                <jdk>[17,20]</jdk>
            </activation>
            <properties>
                <aspectj.version>1.9.20.1</aspectj.version>
            </properties>
        </profile>
        <profile>
            <id>jdk21</id>
            <activation>
                <jdk>[21,)</jdk>
            </activation>
            <properties>
                <aspectj.version>1.9.21</aspectj.version>
            </properties>
        </profile>
    </profiles>

</project>
